@@ -17,23 +17,19 @@
  * Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
  * 02110-1301 USA, or see the FSF site: http://www.fsf.org.
  */
-
 package org.xwiki.security.authorization.cache.internal;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.Deque;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Set;
 
-import org.junit.Before;
-import org.junit.Rule;
-import org.junit.Test;
+import javax.inject.Inject;
+
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.RegisterExtension;
 import org.mockito.InOrder;
-import org.mockito.invocation.InvocationOnMock;
-import org.mockito.stubbing.Answer;
-import org.xwiki.component.manager.ComponentLookupException;
 import org.xwiki.model.EntityType;
 import org.xwiki.model.internal.reference.EntityReferenceFactory;
 import org.xwiki.model.reference.DocumentReference;
@@ -44,23 +40,25 @@ import org.xwiki.security.GroupSecurityReference;
 import org.xwiki.security.SecurityReference;
 import org.xwiki.security.SecurityReferenceFactory;
 import org.xwiki.security.UserSecurityReference;
-import org.xwiki.security.authorization.AuthorizationException;
 import org.xwiki.security.authorization.AuthorizationSettler;
 import org.xwiki.security.authorization.SecurityAccessEntry;
 import org.xwiki.security.authorization.SecurityEntryReader;
 import org.xwiki.security.authorization.SecurityRule;
 import org.xwiki.security.authorization.SecurityRuleEntry;
 import org.xwiki.security.authorization.cache.ConflictingInsertionException;
-import org.xwiki.security.authorization.cache.ParentEntryEvictedException;
-import org.xwiki.security.authorization.cache.SecurityCacheLoader;
 import org.xwiki.security.authorization.cache.SecurityCacheRulesInvalidator;
 import org.xwiki.security.internal.UserBridge;
 import org.xwiki.security.internal.XWikiBridge;
-import org.xwiki.test.AllLogRule;
+import org.xwiki.test.annotation.BeforeComponent;
 import org.xwiki.test.annotation.ComponentList;
-import org.xwiki.test.mockito.MockitoComponentManagerRule;
+import org.xwiki.test.junit5.LogCaptureExtension;
+import org.xwiki.test.junit5.mockito.ComponentTest;
+import org.xwiki.test.junit5.mockito.InjectComponentManager;
+import org.xwiki.test.junit5.mockito.InjectMockComponents;
+import org.xwiki.test.junit5.mockito.MockComponent;
+import org.xwiki.test.mockito.MockitoComponentManager;
 
-import static org.junit.Assert.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.ArgumentMatchers.eq;
@@ -77,53 +75,62 @@ import static org.mockito.Mockito.when;
  * 
  * @version $Id$
  */
+@ComponentTest
 @ComponentList({DefaultSecurityCacheLoader.class, DefaultSecurityReferenceFactory.class, EntityReferenceFactory.class})
-public class DefaultSecurityCacheLoaderTest
+class DefaultSecurityCacheLoaderTest
 {
-    @Rule
-    public MockitoComponentManagerRule mocker = new MockitoComponentManagerRule();
+    @MockComponent
+    private XWikiBridge xwikiBridge;
 
-    @Rule
-    public AllLogRule logRule = new AllLogRule();
+    @MockComponent
+    private SecurityCacheRulesInvalidator securityCacheRulesInvalidator;
 
-    private SecurityCacheLoader securityCacheLoader;
+    @MockComponent
+    private SecurityEntryReader securityEntryReader;
 
+    @MockComponent
+    private UserBridge userBridge;
+
+    @MockComponent
+    private AuthorizationSettler authorizationSettler;
+
+    @InjectMockComponents
+    private DefaultSecurityCacheLoader securityCacheLoader;
+
+    @Inject
     private SecurityReferenceFactory securityReferenceFactory;
 
-    @Before
-    public void setUp() throws Exception
-    {
-        XWikiBridge bridge = mocker.registerMockComponent(XWikiBridge.class);
-        when(bridge.getMainWikiReference()).thenReturn(new WikiReference("wiki"));
-        when(bridge.toCompatibleEntityReference(any(EntityReference.class))).thenAnswer(new Answer<EntityReference>()
-        {
-            @Override
-            public EntityReference answer(InvocationOnMock invocation) throws Throwable
-            {
-                return invocation.getArgument(0);
-            }
-        });
-        securityReferenceFactory = mocker.getInstance(SecurityReferenceFactory.class);
+    @InjectComponentManager
+    private MockitoComponentManager componentManager;
 
-        mocker.registerComponent(org.xwiki.security.authorization.cache.SecurityCache.class, mock(SecurityCache.class));
-        mocker.registerMockComponent(SecurityCacheRulesInvalidator.class);
-        mocker.registerMockComponent(SecurityEntryReader.class);
-        mocker.registerMockComponent(UserBridge.class);
-        mocker.registerMockComponent(AuthorizationSettler.class);
-        securityCacheLoader = mocker.getInstance(SecurityCacheLoader.class);
+    private SecurityCache securityCache;
+
+    @RegisterExtension
+    LogCaptureExtension logCapture = new LogCaptureExtension();
+
+    @BeforeComponent
+    void beforeComponent() throws Exception
+    {
+        this.securityCache = mock(SecurityCache.class);
+        this.componentManager.registerComponent(
+            org.xwiki.security.authorization.cache.SecurityCache.class, this.securityCache);
+
+        when(this.xwikiBridge.getMainWikiReference()).thenReturn(new WikiReference("wiki"));
+        when(this.xwikiBridge.toCompatibleEntityReference(any(EntityReference.class)))
+            .thenAnswer(invocation -> invocation.getArgument(0));
     }
 
     /**
      * Test that after fixing XWIKI-18508 the security cache loader ignores exceptions from the cache.
      */
     @Test
-    public void loadWithConflictingInsertionException() throws Exception
+    void loadWithConflictingInsertionException() throws Exception
     {
         DocumentReference userReference = new DocumentReference("wiki", "Users", "mflorea");
-        UserSecurityReference user = securityReferenceFactory.newUserReference(userReference);
+        UserSecurityReference user = this.securityReferenceFactory.newUserReference(userReference);
 
         DocumentReference documentReference = new DocumentReference("wiki", "Space", "Document");
-        SecurityReference entity = securityReferenceFactory.newEntityReference(documentReference);
+        SecurityReference entity = this.securityReferenceFactory.newEntityReference(documentReference);
 
         SecurityRuleEntry documentEntry = mock(SecurityRuleEntry.class, "document");
         when(documentEntry.getReference()).thenReturn(entity);
@@ -139,33 +146,32 @@ public class DefaultSecurityCacheLoaderTest
 
         long invalidationCounter = 42;
 
-        SecurityCache securityCache = mocker.getInstance(org.xwiki.security.authorization.cache.SecurityCache.class);
-        when(securityCache.get(entity)).thenReturn(documentEntry);
-        when(securityCache.get(entity.getParentSecurityReference())).thenReturn(spaceEntry);
-        when(securityCache.get(entity.getParentSecurityReference().getParentSecurityReference())).thenReturn(wikiEntry);
-        when(securityCache.getGroupsFor(user, null)).thenReturn(null);
-        when(securityCache.getInvalidationCounter()).thenReturn(invalidationCounter);
+        when(this.securityCache.get(entity)).thenReturn(documentEntry);
+        when(this.securityCache.get(entity.getParentSecurityReference())).thenReturn(spaceEntry);
+        when(this.securityCache.get(entity.getParentSecurityReference().getParentSecurityReference()))
+            .thenReturn(wikiEntry);
+        when(this.securityCache.getGroupsFor(user, null)).thenReturn(null);
+        when(this.securityCache.getInvalidationCounter()).thenReturn(invalidationCounter);
 
-        UserBridge userBridge = mocker.getInstance(UserBridge.class);
         DocumentReference groupReference = new DocumentReference("wiki", "Groups", "AllGroup");
         Set<GroupSecurityReference> groups =
-            Collections.singleton(securityReferenceFactory.newGroupReference(groupReference));
-        when(userBridge.getAllGroupsFor(user, userReference.getWikiReference())).thenReturn(groups);
+            Collections.singleton(this.securityReferenceFactory.newGroupReference(groupReference));
+        when(this.userBridge.getAllGroupsFor(user, userReference.getWikiReference())).thenReturn(groups);
 
         SecurityAccessEntry securityAccessEntry = mock(SecurityAccessEntry.class);
 
-        AuthorizationSettler authorizationSettler = mocker.getInstance(AuthorizationSettler.class);
         Deque<SecurityRuleEntry> securityRuleEntries =
-            new LinkedList<SecurityRuleEntry>(Arrays.asList(documentEntry, spaceEntry, wikiEntry));
-        when(authorizationSettler.settle(user, groups, securityRuleEntries)).thenReturn(securityAccessEntry);
+            new LinkedList<>(List.of(documentEntry, spaceEntry, wikiEntry));
+        when(this.authorizationSettler.settle(user, groups, securityRuleEntries)).thenReturn(securityAccessEntry);
 
-        doThrow(ConflictingInsertionException.class).when(securityCache).add(eq(securityAccessEntry), anyLong());
-        doThrow(ConflictingInsertionException.class).when(securityCache).add(eq(securityAccessEntry), isNull(),
-            anyLong());
+        doThrow(ConflictingInsertionException.class).when(this.securityCache)
+            .add(eq(securityAccessEntry), anyLong());
+        doThrow(ConflictingInsertionException.class).when(this.securityCache)
+            .add(eq(securityAccessEntry), isNull(), anyLong());
 
         assertEquals(securityAccessEntry, this.securityCacheLoader.load(user, entity));
 
-        verify(securityCache).add(securityAccessEntry, null, invalidationCounter);
+        verify(this.securityCache).add(securityAccessEntry, null, invalidationCounter);
     }
 
     /**
@@ -173,9 +179,7 @@ public class DefaultSecurityCacheLoaderTest
      * user.
      */
     @Test
-    public void loadForGuestLoadsRulesForMainWiki()
-        throws ComponentLookupException, AuthorizationException, ParentEntryEvictedException,
-        ConflictingInsertionException
+    void loadForGuestLoadsRulesForMainWiki() throws Exception
     {
         UserSecurityReference user = this.securityReferenceFactory.newUserReference(null);
         SecurityReference entity = this.securityReferenceFactory.newEntityReference(new DocumentReference("wiki",
@@ -183,10 +187,8 @@ public class DefaultSecurityCacheLoaderTest
 
         // Mock the security access entry returned by the authorization settler
         SecurityAccessEntry securityAccessEntry = mock(SecurityAccessEntry.class);
-        AuthorizationSettler authorizationSettler = mocker.getInstance(AuthorizationSettler.class);
-        when(authorizationSettler.settle(eq(user), any(), any())).thenReturn(securityAccessEntry);
+        when(this.authorizationSettler.settle(eq(user), any(), any())).thenReturn(securityAccessEntry);
 
-        SecurityEntryReader securityEntryReader = mocker.getInstance(SecurityEntryReader.class);
         // Store SecurityRuleEntry instances for each level of the hierarchy
         SecurityRule documentRule = mock(SecurityRule.class);
         SecurityRuleEntry documentRuleEntry = mock();
@@ -213,7 +215,7 @@ public class DefaultSecurityCacheLoaderTest
         when(guestUserSecurityEntry.getReference()).thenReturn(user);
         when(guestUserSecurityEntry.getRules()).thenReturn(List.of());
 
-        when(securityEntryReader.read(any())).thenAnswer(invocation -> {
+        when(this.securityEntryReader.read(any())).thenAnswer(invocation -> {
             SecurityReference reference = invocation.getArgument(0);
             SecurityRuleEntry result;
             if (reference.getOriginalReference() == null) {
@@ -232,22 +234,21 @@ public class DefaultSecurityCacheLoaderTest
             return result;
         });
 
-        SecurityCache securityCache = mocker.getInstance(org.xwiki.security.authorization.cache.SecurityCache.class);
-        when(securityCache.getInvalidationCounter()).thenReturn(0L).thenReturn(1L);
+        when(this.securityCache.getInvalidationCounter()).thenReturn(0L, 1L);
 
         assertEquals(securityAccessEntry, this.securityCacheLoader.load(user, entity));
 
         // Verify that rules were loaded in the correct order
-        InOrder inOrder = inOrder(securityCache);
-        inOrder.verify(securityCache, times(2)).getInvalidationCounter();
-        inOrder.verify(securityCache).get(entity.getWikiReference());
-        inOrder.verify(securityCache).add(mainWikiRuleEntry, 1);
-        inOrder.verify(securityCache).get(entity.getParentSecurityReference());
-        inOrder.verify(securityCache).add(spaceRuleEntry, 1);
-        inOrder.verify(securityCache).get(entity);
-        inOrder.verify(securityCache).add(documentRuleEntry, 1);
-        inOrder.verify(securityCache).add(securityAccessEntry, null, 0);
+        InOrder inOrder = inOrder(this.securityCache);
+        inOrder.verify(this.securityCache, times(2)).getInvalidationCounter();
+        inOrder.verify(this.securityCache).get(entity.getWikiReference());
+        inOrder.verify(this.securityCache).add(mainWikiRuleEntry, 1);
+        inOrder.verify(this.securityCache).get(entity.getParentSecurityReference());
+        inOrder.verify(this.securityCache).add(spaceRuleEntry, 1);
+        inOrder.verify(this.securityCache).get(entity);
+        inOrder.verify(this.securityCache).add(documentRuleEntry, 1);
+        inOrder.verify(this.securityCache).add(securityAccessEntry, null, 0);
         inOrder.verifyNoMoreInteractions();
-        verify(authorizationSettler).settle(user, Collections.emptySet(), hierarchy);
+        verify(this.authorizationSettler).settle(user, Set.of(), hierarchy);
     }
 }
